Enlarge do-not-disturb toggle button click target.

This CL adjusts paddings of do-not-disturb toggle button in notifier
settings, in order to make toggle button click target larger.
Previously, the padding was given to the container view, so this CL
splits the padding into three (container, label, toggle button).

TEST=manually tested, both in English and Hebrew (RTL)
BUG=784287

Change-Id: I847015fb513deb12b48aaa249bd4631f0650b920
Reviewed-on: https://chromium-review.googlesource.com/768315
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516557}
Former-commit-id: 3ce482a26350b7afa7904a77bbaa5f2442e945df